@startuml diagrama_entidade_relacionamento
!theme united
' Configurações visuais para leitura em preto e branco e layout horizontal
left to right direction
skinparam class {
  BackgroundColor White
  BorderColor Black
  ArrowColor Black
  FontName Arial
  FontSize 12
}

' Entidades com atributos

class USUARIO {
  * id_usuario : INT <<PK>>
  * email : VARCHAR(255) <<UNIQUE>>
  * senha_hash : VARCHAR(255)
  * nome_completo : VARCHAR(255)
  * data_cadastro : TIMESTAMP
  * data_atualizacao : TIMESTAMP
  * tipo_usuario : VARCHAR(20)
}

class CANDIDATO {
  * id_usuario_candidato : INT <<PK,FK>>
  * cpf : VARCHAR(14) <<UNIQUE>>
  * telefone : VARCHAR(20)
  * data_nascimento : DATE
  * linkedin_url : VARCHAR(255)
  * portfolio_url : VARCHAR(255)
}

class EMPRESA {
  * id_usuario_empresa : INT <<PK,FK>>
  * cnpj : VARCHAR(18) <<UNIQUE>>
  * razao_social : VARCHAR(255)
  * setor_atuacao : VARCHAR(100)
  * descricao_empresa : TEXT
  * website_url : VARCHAR(255)
  * logo_path : VARCHAR(255)
}

class ADMINISTRADOR {
  * id_usuario_admin : INT <<PK,FK>>
  * nivel_acesso : VARCHAR(50)
}

class CURRICULO {
  * id_curriculo : INT <<PK>>
  * id_candidato : INT <<FK>>
  objetivo_profissional : TEXT
  experiencia_profissional_texto : TEXT
  formacao_academica_texto : TEXT
  habilidades_texto : TEXT
  idiomas_texto : TEXT
  data_atualizacao_curriculo : TIMESTAMP
}

class VAGA {
  * id_vaga : INT <<PK>>
  * id_empresa : INT <<FK>>
  id_admin_postador : INT <<FK,NULL>>
  * titulo_vaga : VARCHAR(255)
  * descricao_completa : TEXT
  requisitos_obrigatorios : TEXT
  tipo_contratacao : VARCHAR(50)
  modalidade : VARCHAR(50)
  localizacao : VARCHAR(255)
  faixa_salarial_min : DECIMAL(10,2)
  faixa_salarial_max : DECIMAL(10,2)
  data_publicacao : TIMESTAMP
  * status_vaga : VARCHAR(20)
}

class CANDIDATURA {
  * id_candidatura : INT <<PK>>
  * id_candidato : INT <<FK>>
  * id_vaga : INT <<FK>>
  data_candidatura : TIMESTAMP
  * status_candidatura : VARCHAR(50)
  observacoes_empresa : TEXT
}

' Relacionamentos com notação de pé de galinha corrigida

USUARIO ||--|| CANDIDATO : especializa
USUARIO ||--|| EMPRESA : especializa
USUARIO ||--|| ADMINISTRADOR : especializa

CANDIDATO |o--|| CURRICULO : possui
' Um Candidato possui 0 ou 1 Currículo; um Currículo pertence a 1 Candidato

EMPRESA ||--o{ VAGA : publica
' Uma Empresa publica 0 ou Muitas Vagas; uma Vaga pertence a 1 Empresa

ADMINISTRADOR ||--o{ VAGA : posta (opcional)
' Um Administrador posta 0 ou Muitas Vagas; uma Vaga é postada por 0 ou 1 Administrador

CANDIDATO ||--o{ CANDIDATURA : realiza
' Um Candidato realiza 0 ou Muitas Candidaturas

VAGA ||--o{ CANDIDATURA : recebe
' Uma Vaga recebe 0 ou Muitas Candidaturas

@enduml
